--- a/www/style.css
+++ b/www/style.css
@@ -1,15 +1,23 @@
 
 /*** UI styles ***/
 
-/*@font-face {  
-  font-family: "Ubuntu";
-  src: url(Ubuntu-R.ttf) format('truetype'),;
-}*/
-
+@font-face {  
+  font-family: "Open Sans";
+  src: url(OpenSans-Regular.ttf);
+}
+@font-face {  
+  font-family: "Open Sans";
+  font-style: bold;
+  font-weight: bold;
+  src: url(OpenSans-Bold.ttf);
+}
+label {
+	font-family: "Open Sans";
+	font-weight: bold;
+}
 body {
-  /*font-family: 'Ubuntu';*/
+  font-family: 'Open Sans';
   font-size: 12px;
-  
 }
 
 .form-control {
@@ -22,14 +30,18 @@ body {
   font-size: 12px;
 }
 
+/*img {
+  vertical-align: middle;
+  line-height: 48px;
+}*/
 h2 {
-  /*font-family: 'PT Serif';*/
-  font-weight: 700;
+  font-family: 'Open Sans';
+  font-weight: bold;
   padding-top: 5px;
-  padding-bottom: 35px;
   padding-left: 5px;
+  height: 60px;
   font-size: 20px;
-  color: #eee;
+  color: #fff;
   background-color: #256194;
 }
 
